y.output
Terminals unused in grammar

   TK_BREAK
   TK_IN
   TK_SWITCH


State 167 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: TK_START ';' DECLS MAIN TK_STOP ';'

    2 MAIN: TK_MAIN BLOCO
    3     | %empty

    4 DECLS: DECLS DECL
    5      | %empty

    6 DECL: G_VAR ';'
    7     | FUNCTION

    8 FUNCTION: TIPO TK_ID '(' F_PARAMS ')' BLOCO

    9 F_PARAMS: PARAMS

   10 PARAMS: PARAM ',' PARAMS
   11       | PARAM

   12 PARAM: TIPO TK_ID
   13      | TIPO TK_ID '[' E ']'
   14      | TIPO TK_ID '[' E ']' '[' E ']'
   15      | %empty

   16 G_VAR: TIPO TK_ID
   17      | TIPO TK_ID '[' TK_CINT ']'
   18      | TIPO TK_ID '[' TK_CINT ']' '[' TK_CINT ']'

   19 VAR: TIPO VAR_DEFS
   20    | TIPO TK_ID TK_ATRIB E
   21    | TIPO TK_ID '[' TK_CINT ']'
   22    | TIPO TK_ID '[' TK_CINT ']' '[' TK_CINT ']'

   23 VAR_DEFS: TK_ID ',' VAR_DEFS
   24         | TK_ID

   25 ATRIB: TK_ID TK_ATRIB E
   26      | TK_ID '[' E ']' TK_ATRIB E
   27      | TK_ID '[' E ']' '[' E ']' TK_ATRIB E

   28 TIPO: TK_INT
   29     | TK_CHAR
   30     | TK_DOUBLE
   31     | TK_STRING
   32     | TK_BOOL
   33     | TK_VOID

   34 $@1: %empty

   35 BLOCO: TK_BEGIN $@1 CMDS TK_END

   36 SUB_BLOCO: TK_BEGIN CMDS TK_END

   37 CMDS: CMD CMDS
   38     | %empty

   39 CMD: CMD_WROTEU ';'
   40    | CMD_READU ';'
   41    | CMD_RETURN ';'
   42    | CMD_CALL ';'
   43    | CMD_IF
   44    | CMD_FOR
   45    | CMD_WHILE
   46    | CMD_DOWHILE ';'
   47    | ATRIB ';'
   48    | VAR ';'

   49 CMD_WROTEU: TK_WRITE '(' E ')'

   50 CMD_READU: TK_READ '(' TK_ID ')'

   51 CMD_RETURN: TK_RETURN
   52           | TK_RETURN ':' E

   53 CMD_CALL: TK_ID '(' CALL_PARAMS ')'

   54 CALL_PARAMS: C_PARAMS
   55            | %empty

   56 C_PARAMS: C_PARAMS ',' C_PARAM
   57         | C_PARAM

   58 C_PARAM: TK_ID
   59        | TK_ID '[' E ']'

   60 CMD_IF: TK_IF '(' E ')' CMD
   61       | TK_IF '(' E ')' CMD TK_ELSE CMD

   62 CMD_FOR: TK_FOR '(' BEGIN_FOR ';' E ';' CONT_FOR ')' SUB_BLOCO

   63 BEGIN_FOR: TIPO TK_ID TK_ATRIB E
   64          | TK_ID TK_ATRIB E

   65 CONT_FOR: TK_ID TK_ATRIB E

   66 CMD_WHILE: TK_WHILE '(' E ')' SUB_BLOCO

   67 CMD_DOWHILE: TK_DO SUB_BLOCO TK_WHILE '(' E ')'

   68 E: E '+' E
   69  | E '-' E
   70  | E '*' E
   71  | E '/' E
   72  | E TK_G E
   73  | E TK_L E
   74  | E TK_GE E
   75  | E TK_LE E
   76  | E TK_DIFF E
   77  | E TK_E E
   78  | E TK_AND E
   79  | E TK_OR E
   80  | E TK_MOD E
   81  | TK_NOT E
   82  | '(' E ')'
   83  | F

   84 F: TK_ID
   85  | TK_CINT
   86  | TK_CDOUBLE
   87  | TK_CCHAR
   88  | TK_CSTRING
   89  | TK_ID '[' E ']'
   90  | TK_ID '[' E ']' '[' E ']'
   91  | BOOL

   92 BOOL: TK_TRUE
   93     | TK_FALSE


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 49 50 53 60 61 62 66 67 82
')' (41) 8 49 50 53 60 61 62 66 67 82
'*' (42) 70
'+' (43) 68
',' (44) 10 23 56
'-' (45) 69
'/' (47) 71
':' (58) 52
';' (59) 1 6 39 40 41 42 46 47 48 62
'[' (91) 13 14 17 18 21 22 26 27 59 89 90
']' (93) 13 14 17 18 21 22 26 27 59 89 90
error (256)
TK_INT (258) 28
TK_CHAR (259) 29
TK_DOUBLE (260) 30
TK_STRING (261) 31
TK_BOOL (262) 32
TK_VOID (263) 33
TK_TRUE (264) 92
TK_FALSE (265) 93
TK_MAIN (266) 2
TK_BEGIN (267) 35 36
TK_END (268) 35 36
TK_ID (269) 8 12 13 14 16 17 18 20 21 22 23 24 25 26 27 50 53 58 59
    63 64 65 84 89 90
TK_CINT (270) 17 18 21 22 85
TK_CDOUBLE (271) 86
TK_CSTRING (272) 88
TK_RETURN (273) 51 52
TK_ATRIB (274) 20 25 26 27 63 64 65
TK_CCHAR (275) 87
TK_WRITE (276) 49
TK_READ (277) 50
TK_G (278) 72
TK_L (279) 73
TK_GE (280) 74
TK_LE (281) 75
TK_DIFF (282) 76
TK_IF (283) 60 61
TK_ELSE (284) 61
TK_E (285) 77
TK_AND (286) 78
TK_OR (287) 79
TK_NOT (288) 81
TK_BREAK (289)
TK_IN (290)
TK_FOR (291) 62
TK_WHILE (292) 66 67
TK_DO (293) 67
TK_SWITCH (294)
TK_START (295) 1
TK_STOP (296) 1
TK_MOD (297) 80


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
S (55)
    on left: 1, on right: 0
MAIN (56)
    on left: 2 3, on right: 1
DECLS (57)
    on left: 4 5, on right: 1 4
DECL (58)
    on left: 6 7, on right: 4
FUNCTION (59)
    on left: 8, on right: 7
F_PARAMS (60)
    on left: 9, on right: 8
PARAMS (61)
    on left: 10 11, on right: 9 10
PARAM (62)
    on left: 12 13 14 15, on right: 10 11
G_VAR (63)
    on left: 16 17 18, on right: 6
VAR (64)
    on left: 19 20 21 22, on right: 48
VAR_DEFS (65)
    on left: 23 24, on right: 19 23
ATRIB (66)
    on left: 25 26 27, on right: 47
TIPO (67)
    on left: 28 29 30 31 32 33, on right: 8 12 13 14 16 17 18 19 20
    21 22 63
BLOCO (68)
    on left: 35, on right: 2 8
$@1 (69)
    on left: 34, on right: 35
SUB_BLOCO (70)
    on left: 36, on right: 62 66 67
CMDS (71)
    on left: 37 38, on right: 35 36 37
CMD (72)
    on left: 39 40 41 42 43 44 45 46 47 48, on right: 37 60 61
CMD_WROTEU (73)
    on left: 49, on right: 39
CMD_READU (74)
    on left: 50, on right: 40
CMD_RETURN (75)
    on left: 51 52, on right: 41
CMD_CALL (76)
    on left: 53, on right: 42
CALL_PARAMS (77)
    on left: 54 55, on right: 53
C_PARAMS (78)
    on left: 56 57, on right: 54 56
C_PARAM (79)
    on left: 58 59, on right: 56 57
CMD_IF (80)
    on left: 60 61, on right: 43
CMD_FOR (81)
    on left: 62, on right: 44
BEGIN_FOR (82)
    on left: 63 64, on right: 62
CONT_FOR (83)
    on left: 65, on right: 62
CMD_WHILE (84)
    on left: 66, on right: 45
CMD_DOWHILE (85)
    on left: 67, on right: 46
E (86)
    on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83, on right:
    13 14 20 25 26 27 49 52 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76 77 78 79 80 81 82 89 90
F (87)
    on left: 84 85 86 87 88 89 90 91, on right: 83
BOOL (88)
    on left: 92 93, on right: 91


State 0

    0 $accept: . S $end

    TK_START  shift, and go to state 1

    S  go to state 2


State 1

    1 S: TK_START . ';' DECLS MAIN TK_STOP ';'

    ';'  shift, and go to state 3


State 2

    0 $accept: S . $end

    $end  shift, and go to state 4


State 3

    1 S: TK_START ';' . DECLS MAIN TK_STOP ';'

    $default  reduce using rule 5 (DECLS)

    DECLS  go to state 5


State 4

    0 $accept: S $end .

    $default  accept


State 5

    1 S: TK_START ';' DECLS . MAIN TK_STOP ';'
    4 DECLS: DECLS . DECL

    TK_INT     shift, and go to state 6
    TK_CHAR    shift, and go to state 7
    TK_DOUBLE  shift, and go to state 8
    TK_STRING  shift, and go to state 9
    TK_BOOL    shift, and go to state 10
    TK_VOID    shift, and go to state 11
    TK_MAIN    shift, and go to state 12

    $default  reduce using rule 3 (MAIN)

    MAIN      go to state 13
    DECL      go to state 14
    FUNCTION  go to state 15
    G_VAR     go to state 16
    TIPO      go to state 17


State 6

   28 TIPO: TK_INT .

    $default  reduce using rule 28 (TIPO)


State 7

   29 TIPO: TK_CHAR .

    $default  reduce using rule 29 (TIPO)


State 8

   30 TIPO: TK_DOUBLE .

    $default  reduce using rule 30 (TIPO)


State 9

   31 TIPO: TK_STRING .

    $default  reduce using rule 31 (TIPO)


State 10

   32 TIPO: TK_BOOL .

    $default  reduce using rule 32 (TIPO)


State 11

   33 TIPO: TK_VOID .

    $default  reduce using rule 33 (TIPO)


State 12

    2 MAIN: TK_MAIN . BLOCO

    TK_BEGIN  shift, and go to state 18

    BLOCO  go to state 19


State 13

    1 S: TK_START ';' DECLS MAIN . TK_STOP ';'

    TK_STOP  shift, and go to state 20


State 14

    4 DECLS: DECLS DECL .

    $default  reduce using rule 4 (DECLS)


State 15

    7 DECL: FUNCTION .

    $default  reduce using rule 7 (DECL)


State 16

    6 DECL: G_VAR . ';'

    ';'  shift, and go to state 21


State 17

    8 FUNCTION: TIPO . TK_ID '(' F_PARAMS ')' BLOCO
   16 G_VAR: TIPO . TK_ID
   17      | TIPO . TK_ID '[' TK_CINT ']'
   18      | TIPO . TK_ID '[' TK_CINT ']' '[' TK_CINT ']'

    TK_ID  shift, and go to state 22


State 18

   35 BLOCO: TK_BEGIN . $@1 CMDS TK_END

    $default  reduce using rule 34 ($@1)

    $@1  go to state 23


State 19

    2 MAIN: TK_MAIN BLOCO .

    $default  reduce using rule 2 (MAIN)


State 20

    1 S: TK_START ';' DECLS MAIN TK_STOP . ';'

    ';'  shift, and go to state 24


State 21

    6 DECL: G_VAR ';' .

    $default  reduce using rule 6 (DECL)


State 22

    8 FUNCTION: TIPO TK_ID . '(' F_PARAMS ')' BLOCO
   16 G_VAR: TIPO TK_ID .
   17      | TIPO TK_ID . '[' TK_CINT ']'
   18      | TIPO TK_ID . '[' TK_CINT ']' '[' TK_CINT ']'

    '('  shift, and go to state 25
    '['  shift, and go to state 26

    $default  reduce using rule 16 (G_VAR)


State 23

   35 BLOCO: TK_BEGIN $@1 . CMDS TK_END

    TK_INT     shift, and go to state 6
    TK_CHAR    shift, and go to state 7
    TK_DOUBLE  shift, and go to state 8
    TK_STRING  shift, and go to state 9
    TK_BOOL    shift, and go to state 10
    TK_VOID    shift, and go to state 11
    TK_ID      shift, and go to state 27
    TK_RETURN  shift, and go to state 28
    TK_WRITE   shift, and go to state 29
    TK_READ    shift, and go to state 30
    TK_IF      shift, and go to state 31
    TK_FOR     shift, and go to state 32
    TK_WHILE   shift, and go to state 33
    TK_DO      shift, and go to state 34

    $default  reduce using rule 38 (CMDS)

    VAR          go to state 35
    ATRIB        go to state 36
    TIPO         go to state 37
    CMDS         go to state 38
    CMD          go to state 39
    CMD_WROTEU   go to state 40
    CMD_READU    go to state 41
    CMD_RETURN   go to state 42
    CMD_CALL     go to state 43
    CMD_IF       go to state 44
    CMD_FOR      go to state 45
    CMD_WHILE    go to state 46
    CMD_DOWHILE  go to state 47


State 24

    1 S: TK_START ';' DECLS MAIN TK_STOP ';' .

    $default  reduce using rule 1 (S)


State 25

    8 FUNCTION: TIPO TK_ID '(' . F_PARAMS ')' BLOCO

    TK_INT     shift, and go to state 6
    TK_CHAR    shift, and go to state 7
    TK_DOUBLE  shift, and go to state 8
    TK_STRING  shift, and go to state 9
    TK_BOOL    shift, and go to state 10
    TK_VOID    shift, and go to state 11

    $default  reduce using rule 15 (PARAM)

    F_PARAMS  go to state 48
    PARAMS    go to state 49
    PARAM     go to state 50
    TIPO      go to state 51


State 26

   17 G_VAR: TIPO TK_ID '[' . TK_CINT ']'
   18      | TIPO TK_ID '[' . TK_CINT ']' '[' TK_CINT ']'

    TK_CINT  shift, and go to state 52


State 27

   25 ATRIB: TK_ID . TK_ATRIB E
   26      | TK_ID . '[' E ']' TK_ATRIB E
   27      | TK_ID . '[' E ']' '[' E ']' TK_ATRIB E
   53 CMD_CALL: TK_ID . '(' CALL_PARAMS ')'

    TK_ATRIB  shift, and go to state 53
    '('       shift, and go to state 54
    '['       shift, and go to state 55


State 28

   51 CMD_RETURN: TK_RETURN .
   52           | TK_RETURN . ':' E

    ':'  shift, and go to state 56

    $default  reduce using rule 51 (CMD_RETURN)


State 29

   49 CMD_WROTEU: TK_WRITE . '(' E ')'

    '('  shift, and go to state 57


State 30

   50 CMD_READU: TK_READ . '(' TK_ID ')'

    '('  shift, and go to state 58


State 31

   60 CMD_IF: TK_IF . '(' E ')' CMD
   61       | TK_IF . '(' E ')' CMD TK_ELSE CMD

    '('  shift, and go to state 59


State 32

   62 CMD_FOR: TK_FOR . '(' BEGIN_FOR ';' E ';' CONT_FOR ')' SUB_BLOCO

    '('  shift, and go to state 60


State 33

   66 CMD_WHILE: TK_WHILE . '(' E ')' SUB_BLOCO

    '('  shift, and go to state 61


State 34

   67 CMD_DOWHILE: TK_DO . SUB_BLOCO TK_WHILE '(' E ')'

    TK_BEGIN  shift, and go to state 62

    SUB_BLOCO  go to state 63


State 35

   48 CMD: VAR . ';'

    ';'  shift, and go to state 64


State 36

   47 CMD: ATRIB . ';'

    ';'  shift, and go to state 65


State 37

   19 VAR: TIPO . VAR_DEFS
   20    | TIPO . TK_ID TK_ATRIB E
   21    | TIPO . TK_ID '[' TK_CINT ']'
   22    | TIPO . TK_ID '[' TK_CINT ']' '[' TK_CINT ']'

    TK_ID  shift, and go to state 66

    VAR_DEFS  go to state 67


State 38

   35 BLOCO: TK_BEGIN $@1 CMDS . TK_END

    TK_END  shift, and go to state 68


State 39

   37 CMDS: CMD . CMDS

    TK_INT     shift, and go to state 6
    TK_CHAR    shift, and go to state 7
    TK_DOUBLE  shift, and go to state 8
    TK_STRING  shift, and go to state 9
    TK_BOOL    shift, and go to state 10
    TK_VOID    shift, and go to state 11
    TK_ID      shift, and go to state 27
    TK_RETURN  shift, and go to state 28
    TK_WRITE   shift, and go to state 29
    TK_READ    shift, and go to state 30
    TK_IF      shift, and go to state 31
    TK_FOR     shift, and go to state 32
    TK_WHILE   shift, and go to state 33
    TK_DO      shift, and go to state 34

    $default  reduce using rule 38 (CMDS)

    VAR          go to state 35
    ATRIB        go to state 36
    TIPO         go to state 37
    CMDS         go to state 69
    CMD          go to state 39
    CMD_WROTEU   go to state 40
    CMD_READU    go to state 41
    CMD_RETURN   go to state 42
    CMD_CALL     go to state 43
    CMD_IF       go to state 44
    CMD_FOR      go to state 45
    CMD_WHILE    go to state 46
    CMD_DOWHILE  go to state 47


State 40

   39 CMD: CMD_WROTEU . ';'

    ';'  shift, and go to state 70


State 41

   40 CMD: CMD_READU . ';'

    ';'  shift, and go to state 71


State 42

   41 CMD: CMD_RETURN . ';'

    ';'  shift, and go to state 72


State 43

   42 CMD: CMD_CALL . ';'

    ';'  shift, and go to state 73


State 44

   43 CMD: CMD_IF .

    $default  reduce using rule 43 (CMD)


State 45

   44 CMD: CMD_FOR .

    $default  reduce using rule 44 (CMD)


State 46

   45 CMD: CMD_WHILE .

    $default  reduce using rule 45 (CMD)


State 47

   46 CMD: CMD_DOWHILE . ';'

    ';'  shift, and go to state 74


State 48

    8 FUNCTION: TIPO TK_ID '(' F_PARAMS . ')' BLOCO

    ')'  shift, and go to state 75


State 49

    9 F_PARAMS: PARAMS .

    $default  reduce using rule 9 (F_PARAMS)


State 50

   10 PARAMS: PARAM . ',' PARAMS
   11       | PARAM .

    ','  shift, and go to state 76

    $default  reduce using rule 11 (PARAMS)


State 51

   12 PARAM: TIPO . TK_ID
   13      | TIPO . TK_ID '[' E ']'
   14      | TIPO . TK_ID '[' E ']' '[' E ']'

    TK_ID  shift, and go to state 77


State 52

   17 G_VAR: TIPO TK_ID '[' TK_CINT . ']'
   18      | TIPO TK_ID '[' TK_CINT . ']' '[' TK_CINT ']'

    ']'  shift, and go to state 78


State 53

   25 ATRIB: TK_ID TK_ATRIB . E

    TK_TRUE     shift, and go to state 79
    TK_FALSE    shift, and go to state 80
    TK_ID       shift, and go to state 81
    TK_CINT     shift, and go to state 82
    TK_CDOUBLE  shift, and go to state 83
    TK_CSTRING  shift, and go to state 84
    TK_CCHAR    shift, and go to state 85
    TK_NOT      shift, and go to state 86
    '('         shift, and go to state 87

    E     go to state 88
    F     go to state 89
    BOOL  go to state 90


State 54

   53 CMD_CALL: TK_ID '(' . CALL_PARAMS ')'

    TK_ID  shift, and go to state 91

    $default  reduce using rule 55 (CALL_PARAMS)

    CALL_PARAMS  go to state 92
    C_PARAMS     go to state 93
    C_PARAM      go to state 94


State 55

   26 ATRIB: TK_ID '[' . E ']' TK_ATRIB E
   27      | TK_ID '[' . E ']' '[' E ']' TK_ATRIB E

    TK_TRUE     shift, and go to state 79
    TK_FALSE    shift, and go to state 80
    TK_ID       shift, and go to state 81
    TK_CINT     shift, and go to state 82
    TK_CDOUBLE  shift, and go to state 83
    TK_CSTRING  shift, and go to state 84
    TK_CCHAR    shift, and go to state 85
    TK_NOT      shift, and go to state 86
    '('         shift, and go to state 87

    E     go to state 95
    F     go to state 89
    BOOL  go to state 90


State 56

   52 CMD_RETURN: TK_RETURN ':' . E

    TK_TRUE     shift, and go to state 79
    TK_FALSE    shift, and go to state 80
    TK_ID       shift, and go to state 81
    TK_CINT     shift, and go to state 82
    TK_CDOUBLE  shift, and go to state 83
    TK_CSTRING  shift, and go to state 84
    TK_CCHAR    shift, and go to state 85
    TK_NOT      shift, and go to state 86
    '('         shift, and go to state 87

    E     go to state 96
    F     go to state 89
    BOOL  go to state 90


State 57

   49 CMD_WROTEU: TK_WRITE '(' . E ')'

    TK_TRUE     shift, and go to state 79
    TK_FALSE    shift, and go to state 80
    TK_ID       shift, and go to state 81
    TK_CINT     shift, and go to state 82
    TK_CDOUBLE  shift, and go to state 83
    TK_CSTRING  shift, and go to state 84
    TK_CCHAR    shift, and go to state 85
    TK_NOT      shift, and go to state 86
    '('         shift, and go to state 87

    E     go to state 97
    F     go to state 89
    BOOL  go to state 90


State 58

   50 CMD_READU: TK_READ '(' . TK_ID ')'

    TK_ID  shift, and go to state 98


State 59

   60 CMD_IF: TK_IF '(' . E ')' CMD
   61       | TK_IF '(' . E ')' CMD TK_ELSE CMD

    TK_TRUE     shift, and go to state 79
    TK_FALSE    shift, and go to state 80
    TK_ID       shift, and go to state 81
    TK_CINT     shift, and go to state 82
    TK_CDOUBLE  shift, and go to state 83
    TK_CSTRING  shift, and go to state 84
    TK_CCHAR    shift, and go to state 85
    TK_NOT      shift, and go to state 86
    '('         shift, and go to state 87

    E     go to state 99
    F     go to state 89
    BOOL  go to state 90


State 60

   62 CMD_FOR: TK_FOR '(' . BEGIN_FOR ';' E ';' CONT_FOR ')' SUB_BLOCO

    TK_INT     shift, and go to state 6
    TK_CHAR    shift, and go to state 7
    TK_DOUBLE  shift, and go to state 8
    TK_STRING  shift, and go to state 9
    TK_BOOL    shift, and go to state 10
    TK_VOID    shift, and go to state 11
    TK_ID      shift, and go to state 100

    TIPO       go to state 101
    BEGIN_FOR  go to state 102


State 61

   66 CMD_WHILE: TK_WHILE '(' . E ')' SUB_BLOCO

    TK_TRUE     shift, and go to state 79
    TK_FALSE    shift, and go to state 80
    TK_ID       shift, and go to state 81
    TK_CINT     shift, and go to state 82
    TK_CDOUBLE  shift, and go to state 83
    TK_CSTRING  shift, and go to state 84
    TK_CCHAR    shift, and go to state 85
    TK_NOT      shift, and go to state 86
    '('         shift, and go to state 87

    E     go to state 103
    F     go to state 89
    BOOL  go to state 90


State 62

   36 SUB_BLOCO: TK_BEGIN . CMDS TK_END

    TK_INT     shift, and go to state 6
    TK_CHAR    shift, and go to state 7
    TK_DOUBLE  shift, and go to state 8
    TK_STRING  shift, and go to state 9
    TK_BOOL    shift, and go to state 10
    TK_VOID    shift, and go to state 11
    TK_ID      shift, and go to state 27
    TK_RETURN  shift, and go to state 28
    TK_WRITE   shift, and go to state 29
    TK_READ    shift, and go to state 30
    TK_IF      shift, and go to state 31
    TK_FOR     shift, and go to state 32
    TK_WHILE   shift, and go to state 33
    TK_DO      shift, and go to state 34

    $default  reduce using rule 38 (CMDS)

    VAR          go to state 35
    ATRIB        go to state 36
    TIPO         go to state 37
    CMDS         go to state 104
    CMD          go to state 39
    CMD_WROTEU   go to state 40
    CMD_READU    go to state 41
    CMD_RETURN   go to state 42
    CMD_CALL     go to state 43
    CMD_IF       go to state 44
    CMD_FOR      go to state 45
    CMD_WHILE    go to state 46
    CMD_DOWHILE  go to state 47


State 63

   67 CMD_DOWHILE: TK_DO SUB_BLOCO . TK_WHILE '(' E ')'

    TK_WHILE  shift, and go to state 105


State 64

   48 CMD: VAR ';' .

    $default  reduce using rule 48 (CMD)


State 65

   47 CMD: ATRIB ';' .

    $default  reduce using rule 47 (CMD)


State 66

   20 VAR: TIPO TK_ID . TK_ATRIB E
   21    | TIPO TK_ID . '[' TK_CINT ']'
   22    | TIPO TK_ID . '[' TK_CINT ']' '[' TK_CINT ']'
   23 VAR_DEFS: TK_ID . ',' VAR_DEFS
   24         | TK_ID .

    TK_ATRIB  shift, and go to state 106
    ','       shift, and go to state 107
    '['       shift, and go to state 108

    $default  reduce using rule 24 (VAR_DEFS)


State 67

   19 VAR: TIPO VAR_DEFS .

    $default  reduce using rule 19 (VAR)


State 68

   35 BLOCO: TK_BEGIN $@1 CMDS TK_END .

    $default  reduce using rule 35 (BLOCO)


State 69

   37 CMDS: CMD CMDS .

    $default  reduce using rule 37 (CMDS)


State 70

   39 CMD: CMD_WROTEU ';' .

    $default  reduce using rule 39 (CMD)


State 71

   40 CMD: CMD_READU ';' .

    $default  reduce using rule 40 (CMD)


State 72

   41 CMD: CMD_RETURN ';' .

    $default  reduce using rule 41 (CMD)


State 73

   42 CMD: CMD_CALL ';' .

    $default  reduce using rule 42 (CMD)


State 74

   46 CMD: CMD_DOWHILE ';' .

    $default  reduce using rule 46 (CMD)


State 75

    8 FUNCTION: TIPO TK_ID '(' F_PARAMS ')' . BLOCO

    TK_BEGIN  shift, and go to state 18

    BLOCO  go to state 109


State 76

   10 PARAMS: PARAM ',' . PARAMS

    TK_INT     shift, and go to state 6
    TK_CHAR    shift, and go to state 7
    TK_DOUBLE  shift, and go to state 8
    TK_STRING  shift, and go to state 9
    TK_BOOL    shift, and go to state 10
    TK_VOID    shift, and go to state 11

    $default  reduce using rule 15 (PARAM)

    PARAMS  go to state 110
    PARAM   go to state 50
    TIPO    go to state 51


State 77

   12 PARAM: TIPO TK_ID .
   13      | TIPO TK_ID . '[' E ']'
   14      | TIPO TK_ID . '[' E ']' '[' E ']'

    '['  shift, and go to state 111

    $default  reduce using rule 12 (PARAM)


State 78

   17 G_VAR: TIPO TK_ID '[' TK_CINT ']' .
   18      | TIPO TK_ID '[' TK_CINT ']' . '[' TK_CINT ']'

    '['  shift, and go to state 112

    $default  reduce using rule 17 (G_VAR)


State 79

   92 BOOL: TK_TRUE .

    $default  reduce using rule 92 (BOOL)


State 80

   93 BOOL: TK_FALSE .

    $default  reduce using rule 93 (BOOL)


State 81

   84 F: TK_ID .
   89  | TK_ID . '[' E ']'
   90  | TK_ID . '[' E ']' '[' E ']'

    '['  shift, and go to state 113

    $default  reduce using rule 84 (F)


State 82

   85 F: TK_CINT .

    $default  reduce using rule 85 (F)


State 83

   86 F: TK_CDOUBLE .

    $default  reduce using rule 86 (F)


State 84

   88 F: TK_CSTRING .

    $default  reduce using rule 88 (F)


State 85

   87 F: TK_CCHAR .

    $default  reduce using rule 87 (F)


State 86

   81 E: TK_NOT . E

    TK_TRUE     shift, and go to state 79
    TK_FALSE    shift, and go to state 80
    TK_ID       shift, and go to state 81
    TK_CINT     shift, and go to state 82
    TK_CDOUBLE  shift, and go to state 83
    TK_CSTRING  shift, and go to state 84
    TK_CCHAR    shift, and go to state 85
    TK_NOT      shift, and go to state 86
    '('         shift, and go to state 87

    E     go to state 114
    F     go to state 89
    BOOL  go to state 90


State 87

   82 E: '(' . E ')'

    TK_TRUE     shift, and go to state 79
    TK_FALSE    shift, and go to state 80
    TK_ID       shift, and go to state 81
    TK_CINT     shift, and go to state 82
    TK_CDOUBLE  shift, and go to state 83
    TK_CSTRING  shift, and go to state 84
    TK_CCHAR    shift, and go to state 85
    TK_NOT      shift, and go to state 86
    '('         shift, and go to state 87

    E     go to state 115
    F     go to state 89
    BOOL  go to state 90


State 88

   25 ATRIB: TK_ID TK_ATRIB E .
   68 E: E . '+' E
   69  | E . '-' E
   70  | E . '*' E
   71  | E . '/' E
   72  | E . TK_G E
   73  | E . TK_L E
   74  | E . TK_GE E
   75  | E . TK_LE E
   76  | E . TK_DIFF E
   77  | E . TK_E E
   78  | E . TK_AND E
   79  | E . TK_OR E
   80  | E . TK_MOD E

    TK_G     shift, and go to state 116
    TK_L     shift, and go to state 117
    TK_GE    shift, and go to state 118
    TK_LE    shift, and go to state 119
    TK_DIFF  shift, and go to state 120
    TK_E     shift, and go to state 121
    TK_AND   shift, and go to state 122
    TK_OR    shift, and go to state 123
    '+'      shift, and go to state 124
    '-'      shift, and go to state 125
    '*'      shift, and go to state 126
    '/'      shift, and go to state 127
    TK_MOD   shift, and go to state 128

    $default  reduce using rule 25 (ATRIB)


State 89

   83 E: F .

    $default  reduce using rule 83 (E)


State 90

   91 F: BOOL .

    $default  reduce using rule 91 (F)


State 91

   58 C_PARAM: TK_ID .
   59        | TK_ID . '[' E ']'

    '['  shift, and go to state 129

    $default  reduce using rule 58 (C_PARAM)


State 92

   53 CMD_CALL: TK_ID '(' CALL_PARAMS . ')'

    ')'  shift, and go to state 130


State 93

   54 CALL_PARAMS: C_PARAMS .
   56 C_PARAMS: C_PARAMS . ',' C_PARAM

    ','  shift, and go to state 131

    $default  reduce using rule 54 (CALL_PARAMS)


State 94

   57 C_PARAMS: C_PARAM .

    $default  reduce using rule 57 (C_PARAMS)


State 95

   26 ATRIB: TK_ID '[' E . ']' TK_ATRIB E
   27      | TK_ID '[' E . ']' '[' E ']' TK_ATRIB E
   68 E: E . '+' E
   69  | E . '-' E
   70  | E . '*' E
   71  | E . '/' E
   72  | E . TK_G E
   73  | E . TK_L E
   74  | E . TK_GE E
   75  | E . TK_LE E
   76  | E . TK_DIFF E
   77  | E . TK_E E
   78  | E . TK_AND E
   79  | E . TK_OR E
   80  | E . TK_MOD E

    TK_G     shift, and go to state 116
    TK_L     shift, and go to state 117
    TK_GE    shift, and go to state 118
    TK_LE    shift, and go to state 119
    TK_DIFF  shift, and go to state 120
    TK_E     shift, and go to state 121
    TK_AND   shift, and go to state 122
    TK_OR    shift, and go to state 123
    '+'      shift, and go to state 124
    '-'      shift, and go to state 125
    '*'      shift, and go to state 126
    '/'      shift, and go to state 127
    TK_MOD   shift, and go to state 128
    ']'      shift, and go to state 132


State 96

   52 CMD_RETURN: TK_RETURN ':' E .
   68 E: E . '+' E
   69  | E . '-' E
   70  | E . '*' E
   71  | E . '/' E
   72  | E . TK_G E
   73  | E . TK_L E
   74  | E . TK_GE E
   75  | E . TK_LE E
   76  | E . TK_DIFF E
   77  | E . TK_E E
   78  | E . TK_AND E
   79  | E . TK_OR E
   80  | E . TK_MOD E

    TK_G     shift, and go to state 116
    TK_L     shift, and go to state 117
    TK_GE    shift, and go to state 118
    TK_LE    shift, and go to state 119
    TK_DIFF  shift, and go to state 120
    TK_E     shift, and go to state 121
    TK_AND   shift, and go to state 122
    TK_OR    shift, and go to state 123
    '+'      shift, and go to state 124
    '-'      shift, and go to state 125
    '*'      shift, and go to state 126
    '/'      shift, and go to state 127
    TK_MOD   shift, and go to state 128

    $default  reduce using rule 52 (CMD_RETURN)


State 97

   49 CMD_WROTEU: TK_WRITE '(' E . ')'
   68 E: E . '+' E
   69  | E . '-' E
   70  | E . '*' E
   71  | E . '/' E
   72  | E . TK_G E
   73  | E . TK_L E
   74  | E . TK_GE E
   75  | E . TK_LE E
   76  | E . TK_DIFF E
   77  | E . TK_E E
   78  | E . TK_AND E
   79  | E . TK_OR E
   80  | E . TK_MOD E

    TK_G     shift, and go to state 116
    TK_L     shift, and go to state 117
    TK_GE    shift, and go to state 118
    TK_LE    shift, and go to state 119
    TK_DIFF  shift, and go to state 120
    TK_E     shift, and go to state 121
    TK_AND   shift, and go to state 122
    TK_OR    shift, and go to state 123
    '+'      shift, and go to state 124
    '-'      shift, and go to state 125
    '*'      shift, and go to state 126
    '/'      shift, and go to state 127
    TK_MOD   shift, and go to state 128
    ')'      shift, and go to state 133


State 98

   50 CMD_READU: TK_READ '(' TK_ID . ')'

    ')'  shift, and go to state 134


State 99

   60 CMD_IF: TK_IF '(' E . ')' CMD
   61       | TK_IF '(' E . ')' CMD TK_ELSE CMD
   68 E: E . '+' E
   69  | E . '-' E
   70  | E . '*' E
   71  | E . '/' E
   72  | E . TK_G E
   73  | E . TK_L E
   74  | E . TK_GE E
   75  | E . TK_LE E
   76  | E . TK_DIFF E
   77  | E . TK_E E
   78  | E . TK_AND E
   79  | E . TK_OR E
   80  | E . TK_MOD E
